# beflex-helpdesk

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-and-push.yml
.sisyphus/notepads/helpdesk/: decisions.md  issues.md  learnings.md  (+1 more)
.sisyphus/plans/: helpdesk.md
backend/: AGENTS.md  Cargo.toml  Dockerfile
backend/migrations/: 20240001_users.sql  20240002_teams_categories.sql  20240003_tickets.sql  20240004_comments_attachments.sql  20240005_email_accounts.sql  20240006_notifications.sql  20240007_projects.sql  20240008_ticket_participants.sql  20240009_user_projects.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/handlers/: attachments.rs  auth.rs  comments.rs  dashboard.rs  email_accounts.rs  mod.rs  notifications.rs  projects.rs  reports.rs  teams.rs  tickets.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: attachment.rs  comment.rs  email_account.rs  mod.rs  notification.rs  project.rs  team.rs  ticket.rs  user.rs
backend/src/services/: auth.rs  email.rs  mod.rs  notification.rs  storage.rs
deploy/: .env.example  docker-compose.yml  init-letsencrypt.sh
deploy/nginx/: nginx.conf
docs/: system-requirements.md
frontend/: AGENTS.md  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: auth-guard.tsx  markdown-editor.tsx  markdown.tsx  providers.tsx  theme-toggle.tsx
frontend/lib/: api.ts  auth.ts  utils.ts
frontend/types/: index.ts
nginx/: nginx.conf
(+30 files in other folders)
